--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@ body {
 	background-color: rgb(0,0,0,0.9);
 }
 
+.description {
+	font-size: 1.0em;
+	color: rgb(255,255,255,1.0); 
+	position: absolute;
+	left: 40%;
+	top: 2em;
+
 h1 {
 	font-size: 2em;
 	font-weight: bold;
