--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
 	position: absolute;
 	left: 40%;
 	top: 2em;
+	margin-top: 0.67em;
+	margin-bottom: 0.67em;
 }
 
 h1 {
@@ -68,17 +70,26 @@ figure {
 	top: 2em;
 }
 
-/*
-.container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	flex-direction: column;
+.vl4 {
+	border-left: 6px solid rgb(228,0,43,1);
+	height: 975px;
+	position: absolute;
+	left: 70%;
+	top: 2em;
 }
-input {
-	height: 20px;
+
+.vl5 {
+	border-left: 6px solid rgb(0,150,57,0.9);
+	height: 975px;
+	position: absolute;
+	left: 70.8%;
+	top: 2em;
 }
-button {
-	min-width: 120px;
+
+.vl6 {
+	border-left: 6px solid rgb(255,2555,255,0.8);
+	height: 975px;
+	position: absolute;
+	left: 71.6%;
+	top: 2em;
 }
-*/
