--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@ body {
 
 .description {
 	font-size: 1.0em;
+	font-weight: bold;
 	color: rgb(255,255,255,1.0); 
 	text-shadow: 2px 2px rgb(228,0,43,0.5);
 	position: absolute;
-	left: 50%;
+	top: 2em;
+	left: 40%;
 }
 
 h1 {
@@ -45,7 +47,7 @@ figure {
 
 .vl {
 	border-left: 6px solid rgb(228,0,43,1);
-	height: 900px;
+	height: 800px;
 	position: absolute;
 	left: 35%;
 	top: 2em;
@@ -53,7 +55,7 @@ figure {
 
 .vl2 {
 	border-left: 6px solid rgb(0,150,57,0.9);
-	height: 900px;
+	height: 800px;
 	position: absolute;
 	left: 35.4%;
 	top: 2em;
@@ -61,7 +63,7 @@ figure {
 
 .vl3 {
 	border-left: 6px solid rgb(255,2555,255,0.8);
-	height: 900px;
+	height: 800px;
 	position: absolute;
 	left: 35.8%;
 	top: 2em;
