--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
+a {
+	font-size: 1.0em;
+	font-weight: bold;
+	float: right;
+	margin-right: 2em;
+}
+
+a:link {
+	color: white;
+	background-color: transparent;
+	text-decoration: underline;
+}
+
+a:visited {
+	color: white;
+	background-color: transparent;
+	text-decoration: underline;
+}
+
+a:hover {
+	color: rgba(0,150,57,0.75);
+	background-color: transparent;
+	text-decoration:underline;
+}
+
 body {
 	background-color: rgb(0,0,0,0.9);
 }
