--- a/style.css
+++ b/style.css
@@ -1,8 +1,25 @@
-a {
-	font-size: 1.0em;
+h1 {
+	font-size: 2em;
 	font-weight: bold;
-	float: right;
-	margin-right: 2em;
+	color: rgb(255,255,255,1.0); 
+	text-shadow: 4px 4px rgb(0,150,57,0.75);
+	text-indent: 0.5em;
+	margin-bottom: 0.0em;
+}
+
+h2 {
+	font-size: 2.0em;
+	font-weight: bold;
+
+	color: rgb(228, 0, 43, 1);
+	text-shadow: 2px 2px rgb(0,150,57,0.75);
+	text-indent: 3.0em;
+
+	margin-top: 0.0em;
+}
+
+a {
+
 }
 
 a:link {
@@ -27,6 +44,26 @@ body {
 	background-color: rgb(0,0,0,0.9);
 }
 
+.title {
+	font-size: 1.0em;
+	font-weight: bold;
+	float: right;
+	margin-right: 2em;
+}
+.list {
+	font-size: 1.2em;
+	font-weight: bold;
+	margin-top: 1.67em;
+	margin-bottom: 0.67em;
+	margin-left: 2.5em;
+	margin-right: 0.0em;
+/*
+	float: left;
+	margin-left: 4em;
+	margin-top: 4em;
+*/
+}
+
 .description {
 	font-size: 1.0em;
 	font-weight: bold;
@@ -35,6 +72,7 @@ body {
 	position: absolute;
 	top: 2em;
 	left: 40%;
+	right: 10%;
 }
 .description2 {
 	font-size: 1.0em;
@@ -44,26 +82,6 @@ body {
 	position: absolute;
 	top: 2em;
 	left: 40%;
-}
-
-h1 {
-	font-size: 2em;
-	font-weight: bold;
-	color: rgb(255,255,255,1.0); 
-	text-shadow: 4px 4px rgb(0,150,57,0.75);
-	text-indent: 0.5em;
-	margin-bottom: 0.0em;
-}
-
-h2 {
-	font-size: 2.0em;
-	font-weight: bold;
-
-	color: rgb(228, 0, 43, 1);
-	text-shadow: 2px 2px rgb(0,150,57,0.75);
-	text-indent: 3.0em;
-
-	margin-top: 0.0em;
 }
 
 figure {
